// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should be able to move boxes - 1 1`] = `
Object {
  "id": "1",
  "name": "test",
  "x": 123,
  "y": 110,
}
`;

exports[`it should be able to move boxes - 1 2`] = `
Object {
  "id": "1",
  "name": "test",
  "x": 145,
  "y": 97,
}
`;

exports[`it should be able to move boxes - 2 1`] = `
Object {
  "id": "1",
  "name": "test",
  "x": 108,
  "y": 107,
}
`;
